--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               fill:false
             },
             {
-              label:"Moyenne marché — Heures creuses (Engie • TotalEnergies • OHM Énergie • Primeo Énergie)",
+              label:"Prix moyen offres de marché (Engie • TotalEnergies • OHM Énergie • Primeo Énergie)",
               data: compVals,
               borderColor:"#334155",
               backgroundColor:"transparent",
