--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="chart-wrapper">
-    <h1>Évolution du prix du kWh — TRVE (Base) vs Moyenne marché Heures creuses</h1>
+    <h1>Évolution du prix du kWh — TRVE vs Offres de marché</h1>
     <div class="legend-note">Profil particulier • Offre <strong>peak/offpeak</strong> (Heures Creuses) • Base <strong>6 kVA</strong> • Unités : €/kWh <strong>TTC</strong></div>
     <canvas id="chart"></canvas>
   </div>
