--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="chart-wrapper">
     <h1>Évolution du prix du kWh — TRVE vs Offres de marché</h1>
-    <div class="legend-note">Profil particulier • Offre <strong>peak/offpeak</strong> (Heures Creuses) • Base <strong>6 kVA</strong> • Unités : €/kWh <strong>TTC</strong></div>
+    <div class="legend-note">Profil particulier • Offre (Heures Creuses) • Base <strong>6 kVA</strong> • Unités : €/kWh <strong>TTC</strong></div>
     <canvas id="chart"></canvas>
   </div>
 
